index page styling

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-  <title>React App</title>
+  <link href="style/main.css" rel="stylesheet" type="text/css">
+  <title>FIFA World Cup 2018</title>
   <body>
-    <div id="root">
-      <a href="/groupStage">Group Stage</a>
-      <a href="#">Knockout Stage</a>
-    </div>
+    <ul id="root">
+      <li class="link">
+        <a href="/groupStage">GROUP STAGE</a>
+      </li>
+      <li class="link">
+        <a href="#">KNOCKOUT STAGE</a>
+      </li>
+    </ul>
 </body>
