knockout stage page vue init

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
   <body>
     <ul id="root">
       <li class="link">
-        <a href="/groupStage">GROUP STAGE</a>
+        <a href="/group">GROUP STAGE</a>
       </li>
       <li class="link">
-        <a href="#">KNOCKOUT STAGE</a>
+        <a href="/knockout">KNOCKOUT STAGE</a>
       </li>
     </ul>
 </body>
