--- a/knockout/index.html
+++ b/knockout/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>knockout</title>
+    <title>FIFA World Cup 2018 Knockout Stage</title>
   </head>
   <body>
     <div id="app"></div>
